[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A bunch of utlities I found myself needing over and over again."
documentation = "https://docs.rs/libremexre"
edition = "2018"
homepage = "https://github.com/remexre/lib"
license = "Apache-2.0/MIT"
name = "libremexre"
repository = "https://github.com/remexre/lib"
version = "0.1.1"

[dependencies]
backtrace = { version = "0.3.13", optional = true }
derive_more = "0.14.0"
futures = { version = "0.1.25", optional = true }
log = { version = "0.4.6", optional = true }
packer = { version = "0.3.1", optional = true }
tokio = { version = "0.1.15", optional = true }
tokio-threadpool = { version = "0.1.11", optional = true }
warp = { version = "0.1.12", optional = true }

[features]
default = ["backtrace", "futures", "log", "packer", "tokio", "tokio-threadpool", "warp"]
